--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="catering.png" />
+    <link rel="icon" href="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/512/external-catering-award-events-flaticons-lineal-color-flat-icons.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
